--- a/dependency-injection-demo.tests/dependency-injection-demo.tests.csproj
+++ b/dependency-injection-demo.tests/dependency-injection-demo.tests.csproj
@@ -5,9 +5,12 @@
     <RootNamespace>dependency_injection_demo.tests</RootNamespace>
 
     <IsPackable>false</IsPackable>
+
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
     <PackageReference Include="Moq" Version="4.14.1" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
