--- a/dependency-injection-demo/Properties/launchSettings.json
+++ b/dependency-injection-demo/Properties/launchSettings.json
@@ -13,7 +13,8 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "docker"
-      }
+      },
+      "applicationUrl": "https://0.0.0.0:5001;http://0.0.0.0:5000"
     },
     "dependency_injection_demo": {
       "commandName": "Project",
@@ -28,7 +29,8 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "publishAllPorts": true,
-      "useSSL": true
+      "useSSL": false,
+      "applicationUrl": "https://0.0.0.0:5001;http://0.0.0.0:5000"
     }
   }
 }
